<resources>
    <string name="app_name">Pizzeria Fazzberia</string>

    <string name="title_menu">Menu</string>
    <string name="title_cart">Cart</string>
    <string name="title_history">History</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>

    <string name="action_register">Register</string>
    <string name="action_return">Return</string>
    <string name="action_rate">Rate</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>

    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <string name="login_failed">"Login failed"</string>
    <string name="login_successful">"Login successful"</string>

    <string name="have_to_log_in">"Log in to acces"</string>

    <string name="login_button">"Login"</string>
    <string name="logout_button">"Logout"</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_telephone_number">Telephone Number</string>

    <string name="no_user_history">"Nothing to show here, make your first order"</string>
    <string name="title_activity_rate">RateActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_thanks">No thanks</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_your_experience">Rate Your Experience</string>

</resources>