<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu"
    >

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.pizzeria.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.pizzeria.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.pizzeria.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_logout"-->
<!--        android:name="com.example.pizzeria.ui.login.LogoutActivity"-->
<!--        android:label="@string/logout_button"-->
<!--        tools:layout="@layout/activity_logout" />-->

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.pizzeria.ui.login.LoginActivity"
        android:label="@string/login_button"
        tools:layout="@layout/activity_login" />

</navigation>