<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/background_black"
    tools:context=".RateActivity">

    <TextView
        android:id="@+id/rateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/rate_your_experience"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"
        android:padding="8dp"
        android:stepSize="1.0" />

    <EditText
        android:id="@+id/rateComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="Leave a comment (optional)"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        android:padding="8dp" />

    <Button
        android:id="@+id/submitRateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/rate_us" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/no_thanks" />
</LinearLayout>
